<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_registration" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/title_events" />
    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
        android:title="@string/title_contact" />

</menu>
