<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.excitedcoder.polyfest.MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:layout_marginBottom="54dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/poly03"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/home_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/event_name"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/titleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginTop="8dp"
                android:text="@string/home_description"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                android:id="@+id/founder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/founder_name"
                android:gravity="center"
                android:textSize="17sp"
                style="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginTop="8dp"
                android:text="@string/dates"
                android:gravity="center"
                android:textSize="16sp"
                style="@style/TextAppearance.AppCompat.Body1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/website_button"
            android:layout_margin="8dp"
            android:text="Visit our website"/>




    </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
